# ossim-plugins

./: .gitignore  CMakeLists.txt
csm3/: CMakeLists.txt
idaho/: CMakeLists.txt  README.md
idaho/src/: CMakeLists.txt  ossimIdahoPluginInit.cpp  ossimIdahoReader.cpp  ossimIdahoReader.h  ossimIdahoReaderFactory.cpp  ossimIdahoReaderFactory.h
idaho/test/: 1borthonode32630.idaho  1borthonode4326.idaho
